--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,27 @@
+:root {
+	--color-bg: #111016;
+	--color-bg-add-button: #fff;
+	--color-back-button: #f5f5f5;
+	--color-bg-input: #19181e;
+	--color-bg-save-button: #222127;
+	--moneybox-shadow-color: rgba(255, 255, 255, 0.15);
+	--other-menu-bg: #ffffff04;
+}
+
+.light{
+	--color-bg: #f5f7fa;
+  	--color-bg-add-button: #4a90e2;
+  	--color-back-button: #141414;
+  	--color-bg-input: #ffffff;
+ 	--color-bg-save-button: #6c63ff;
+  	--moneybox-shadow-color: rgba(0, 0, 0, 0.12);
+  	--other-menu-bg: rgba(0, 0, 0, 0.05);
+}
+
 .app{
 	width: 25vw;
 	height: 70vh;
-	background: #111016;
+	background: var(--color-bg);
 	min-width: 375px;
 	box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
 	border-radius: 10px;
@@ -13,8 +33,8 @@
 	position: absolute;
 	bottom: 5%;
 	right: 8%;
-	color: #111016;
-	background: #fff;
+	color: var(--color-bg);
+	background: var(--color-bg-add-button);
 	border-radius: 50%;
 	width: 52px;
 	height: 52px;
@@ -23,18 +43,12 @@
 }
 
 .add-button:hover{
-	background: #ffffff76;
+	opacity: 0.5;
 }
 
 @media (width <= 762px) {
 	.app{
 		width: 100vw;
 		height: 100vh;
-		background: #111016;
-		min-width: 375px;
-		box-shadow: 0 0 10px rgba(128, 0, 128, 0.402);
-		border-radius: 10px;
-		overflow: hidden;
-		position: relative;
 	}	
 }
