--- a/src/components/AddMenu/addmenu.css
+++ b/src/components/AddMenu/addmenu.css
@@ -4,7 +4,7 @@
 	right: 8%;
 	width: 1px;
 	height: 1px;
-	background: #111016;
+	background: var(--color-bg);
 	transition: all 0.2s;
 	animation: enter 0.3s ease forwards;
 	z-index: 2;
@@ -17,7 +17,7 @@
 
 
 .back-button{
-	color: whitesmoke;
+	color: var(--color-back-button);
 	width: 50px;
 	height: 50px;
 	margin: 20px 10px;
@@ -25,11 +25,11 @@
 }
 
 .back-button:hover{
-	color: rgba(255, 255, 255, 0.509);
+	opacity: 0.5;
 }
 
 .title{
-	color: whitesmoke;
+	color: var(--color-back-button);
 	margin: 10px 10px;
 	font-size: 30px;
 	width: 50px;
@@ -43,17 +43,18 @@ form{
 }
 
 form label{
-	color: rgba(245, 245, 245, 0.495);
+	color: var(--color-back-button);
+	opacity: 0.5;
 	margin-left: 10px;
 	font-weight: 300;
 }
 
 form input{
-	background: #19181e;
+	background: var(--color-bg-input);
 	border: 0;
 	width: 90%;
 	margin-left: 10px;
-	color: whitesmoke;
+	color: var(--color-back-button);
 	margin-bottom: 10px;
 	border-radius: 15px;
 }
@@ -63,10 +64,10 @@ form input:focus{
 }
 
 .save{
-	background: #222127;
+	background: var(--color-bg-save-button);
 	padding: 20px 40px;
 	border-radius: 20px;
-	color: whitesmoke;
+	color: var(--color-back-button);
 	position: absolute;
 	bottom: 5%;
 	left: 50%;
